components/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.13.12
    cert-manager.io/cluster-issuer: "local-ca-issuer"
spec:
  ingressClassName: cilium
  rules:
  - host: mealie.nekropolis.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port:
              number: 9000
  - host: mealie.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port:
              number: 9000
  tls:
  - hosts:
    - mealie.irminsul
    - mealie.nekropolis.irminsul
    secretName: mealie-certificate
